set up javascript and html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<form id="uploadForm">
+    <input type="file" id="csvFile" accept=".csv" required />
+    <button type="submit">Upload and Process</button>
+  </form>
+  
+  <div id="results"></div>
+  
+  <script src="script.js"></script>
+  
