--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     <form id="uploadForm">
       <!-- Optional Text Input Section -->
       <div>
-        <label for="input1">Specify filter criteria:</label><br />
-        <input type="text" id="input1" name="writehere" placeholder="e.g. Only show Chinese cuisine" />
+        <label for="input1">Write the number of training data points you have:</label><br />
+        <input type="text" id="input1" name="spec1" placeholder="e.g. 1, 10, 360" />
       </div>
       <div>
-        <label for="input2">Notes or special instructions:</label><br />
-        <input type="text" id="input2" name="writehere" placeholder="e.g. Highlight negative reviews" />
+        <label for="input2">Include the name of the columns:</label><br />
+        <input type="text" id="input2" name="spec1" placeholder="e.g. restaurant, review, cuisines" />
       </div>
       <div>
         <label for="input3">Other preferences:</label><br />
-        <input type="text" id="input3" name="writehere" placeholder="e.g. Sort by rating" />
+        <input type="text" id="input3" name="spec1" placeholder="e.g. Sort by rating" />
       </div>
 
       <!-- File Upload -->
