--- a/index.html
+++ b/index.html
@@ -17,12 +17,23 @@
       It will analyze the data using a machine learning model to predict restaurant's outcomes based on review sentiments and other features.
       As this is a supervied machine learning model, the model will need previously labeled data in order for this model to be succesful.
       Stated below will be the specifications required for this to work.
-      <strong>Specfications</strong>
-      Each CSV file should contain the following columns:
+    </p>
+    <p>
+      <strong>Specifications</strong>
+        <p>
+          Each CSV file should contain the following columns: (In order for this to be functional, the column names need to be the same as shared below. )
+        </p>
       <ul>
         <li><code>review</code>: Text of the customer review.</li>
         <li><code>label</code>: Sentiment label (e.g., positive, negative).</li>
         <li><code>restaurant</code>: Restaurant Name.</li>
+        <li>Additional columns can include:
+          <ul>
+            <li><code>cuisines</code>: Type of cuisine offered by the restaurant.</li>
+            <li><code>avg_rating</code>: Average rating of the restaurant.</li>
+            <li><code>location</code>: Location of the restaurant.</li>
+          </ul>
+        </li>
       </ul>
     </p>
     <p>
