--- a/index.html
+++ b/index.html
@@ -25,15 +25,18 @@
         </p>
       <ul>
         <li><code>review</code>: Text of the customer review.</li>
-        <li><code>label</code>: Sentiment label (e.g., positive, negative).</li>
+        <li><code>label</code>: Sentiment label (e.g. Training: 1, 0 Testing: [None])</li>
         <li><code>restaurant</code>: Restaurant Name.</li>
-        <li>Additional columns can include:
-          <ul>
-            <li><code>cuisines</code>: Type of cuisine offered by the restaurant.</li>
-            <li><code>avg_rating</code>: Average rating of the restaurant.</li>
-            <li><code>location</code>: Location of the restaurant.</li>
-          </ul>
-        </li>
+      <p>
+        <strong>Optional Columns</strong>
+          The following columns are optional but can enhance the analysis:
+      </p>
+      <ul>
+        <li><code>cuisines</code>: Type of cuisine offered by the restaurant.</li>
+        <li><code>avg_rating</code>: Average rating of the restaurant.</li>
+        <li><code>location</code>: Location of the restaurant.</li>
+      </ul>
+        
       </ul>
     </p>
     <p>
