--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <ul>
         <li><code>cuisines</code>: Type of cuisine offered by the restaurant.</li>
         <li><code>avg_rating</code>: Average rating of the restaurant.</li>
-        <li><code>location</code>: Location of the restaurant.</li>
+        <li><code>zip_code</code>: Location of the restaurant.</li>
       </ul>
         
       </ul>
