--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       We require certain information that will be specified below.
       This web app will provide insights into restaurant hygiene ratings based on customer reviews.
       It will analyze the data using a machine learning model to predict restaurant's outcomes based on review sentiments and other features.
-      As this is a supervied machine learning model, the model will need previously labeled data in order for this model to be succesful.
+      As this is a supervised machine learning model, the model will need previously labeled data in order for this model to be successful.
       Stated below will be the specifications required for this to work.
     </p>
     <p>
